[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-error = "0.2"
tracing-tracy = { path = "/home/drusk/thesis/rust_tracy_client/tracing-tracy" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]
tracy-profiler = ["tracing-tracy/demangle"]
