[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-error = "0.2"
tracing-tracy = { path = "/home/drusk/thesis/rust_tracy_client/tracing-tracy" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
triple_buffer = "8.1.1"
fchashmap = "0.1.3"
vdso = "0.2.2"

[features]
tracy-profiler = ["tracing-tracy/demangle"]
