[package]
name = "cask"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10", features = ["serde"] }
bytemuck = { version = "1.23", features = ["derive"] }
tokio = { version = "1.47", default-features = false, features = ["sync"] }
parking_lot = { version = "0.12" }


[dev-dependencies]
tokio = { version = "1.47", features = ["time", "macros", "rt-multi-thread"] }
criterion = "0.7"


[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "claude"
harness = false
