[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
spells = { version = "0.1.0", path = "../spells" }
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4"] }
tokio = { version = "1.44", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
  "io-util",
] }
tokio-util = { features = ["io"], version = "0.7" }
tokio-stream = "0.1"
futures = "0.3.31"
tracing = "0.1"
